--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
   </head>
   <body>
    <h1> Pragnya Kalvakol  </h1>
-   <h2>Cream Stone</h2>>
+   <h2>Cream Stone</h2>
    <p> Cream Stone is one of the most popular ice cream parlours Chain in India. 
-     Cream Stone Menu is filled with delicious ice cream. 
-     It's made up of homemade waffles bowls and cones with different fusion falvors.
-   </p>>
+     Cream Stone Menu is filled with <b>delicious ice cream</b>. 
+     It's made up of <b>homemade waffles bowls</b> and cones with different fusion falvors.
+   </p>
    <hr>
-   <h3>Directions to cream srone</h3>>
+   <h3>Directions to cream srone</h3>
    Rajiv gandhi international airport is closest to my food location.
    <ol>
-     <li>Catch a flight to india.</li>>
-     <li>Go to Hyderabad</li>>
-     <li>Then go to chaitanyapuri</li>>
-     <li>There you find a place called creamstone</li>>
+     <li>Catch a flight to india.</li>
+     <li>Go to Hyderabad</li>
+     <li>Then go to chaitanyapuri</li>
+     <li>There you find a place called creamstone</li>
      </ol>>
-     <h4>Some food items</h4>>
+     <h4>Some food items</h4>
      <ul>
-       <li>Biryani</li>>
-       <li>Pasta</li>>
-       <li>Thickshake</li>>
-       <li>French fries</li>>
-       <li>Pastery</li>>
-       </ul>>
+       <li>Biryani</li>
+       <li>Pasta</li>
+       <li>Thickshake</li>
+       <li>French fries</li>
+       <li>Pastery</li>
+       </ul>
   </body>
 </html>
