--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
        <li>French fries</li>
        <li>Pastery</li>
        </ul>
+       <a href="aboutme.html">Link</a>
+       <hr>
   </body>
 </html>
