--- a/index.html
+++ b/index.html
@@ -30,5 +30,30 @@
        </ul>
        <a href="aboutme.html">Link</a>
        <hr>
+       <h3>Table for Sports</h3>
+       <p>I like playing sports such as batminton, basket ball, table tennis, cricket.
+        I would recommend these sports if someone asks me to.</p>
+       <table border = "1">
+         <tr>
+          <th>Name of Activity</th>
+          <th>Location</th>
+          <th>Amouny</th>
+         </tr>
+         <tr>
+           <td>VolleyBall</td>
+           <td>Brasil</td>
+           <td>4000</td>
+         </tr>
+         <tr>
+           <td>Badminton</td>
+           <td>America</td>
+           <td>2000</td>
+         </tr>
+         <tr>
+           <td>FootBall</td>
+           <td>China</td>
+           <td>3500</td>
+         </tr>
+       </table>
   </body>
 </html>
