--- a/index.html
+++ b/index.html
@@ -55,5 +55,23 @@
            <td>3500</td>
          </tr>
        </table>
+       <hr>
+       <h3>String Processing</h3>
+       <blockquote>Strings are defined as an array of characters.
+      The difference between a character array and a string is the string is terminated with a special character ‘\0’.</blockquote>
+      <a href="https://www.geeksforgeeks.org/string-data-structure/">Link for String processing</a>
+      <pre>
+        long long compute_hash(string const& s) {
+          const int p = 31;
+          const int m = 1e9 + 9;
+          long long hash_value = 0;
+          long long p_pow = 1;
+          for (char c : s) {
+              hash_value = (hash_value + (c - 'a' + 1) * p_pow) % m;
+              p_pow = (p_pow * p) % m;
+          }
+          return hash_value;
+      }      
+      </pre>
   </body>
 </html>
