--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>my assignment 3 in webApps</title>
   </head>
   <body>
+    <a href="bonus.html">BONUS</a>
    <h1> Pragnya Kalvakol  </h1>
    <h2>Cream Stone</h2>
    <p> Cream Stone is one of the most popular ice cream parlours Chain in India. 
