--- a/bonus.html
+++ b/bonus.html
@@ -4,13 +4,13 @@
 
     <title>Bonus</title>
   </head>
-  <body style="background-color:burlywood" >
+  <body style="background-color:rgb(229, 241, 252)" >
        
-    <h1 style="color: yellowgreen; background-color: rgb(162, 168, 173); font: sans-serif;">KANSAS KITE</h1> 
+    <h1 style="color: rgb(93, 19, 190); background-color: rgb(248, 201, 230); font-style: normal;"><b>KANSAS KITE</b></h1> 
     <p> Kite is mascot of kansas city basket ball team. Kite represents penguin which will be in white and black color. Kite is an mascot created by Pragnya Kalvakol.</p>
     <h3>Below are some of the fun facts about mascot penguin.</h3>
     <li>Penguins evolved to fly underwater.</li>
-    <li>A penguin’s thick feathers aren’t the only way this bird stays warm.</li>
+    <li>A penguin’s thick feathers are not the only way this bird stays warm.</li>
     <li>Penguins live in many locations and habitats.</li>
     <li>Penguin feet are adapted to walk long distances.</li>
     <p></p>
